# EDF

./: CMakeLists.txt  Dockerfile  Makefile  Makefile.old  README.md  aomindefrho.f  atoi.f  besalu.f  bicenarea.f  calcedfd.f  callcall  canlmo.f  canlmo_with_write_orders.f  casoqsloc.f  cidetarea.f  cindgr.f  ciosmix.f  cmplxedf.f.old  compdafh.f  computerdm.f90  configs.f  corr.inc  dafhdrv.f  datatm.f  diagcov.f  edf.f  edfx.f  errdsyev.f  error.f  error.inc  findeigen.f  fourchar.f  fragno.f  getdate.f  implicit.inc  intersection.f  jacobi.f  lengrec.f  lmowfn.f  locrohf.f  (+43 more)
.devcontainer/: devcontainer.json
cmake/: FindMKL.cmake
src/: CMakeLists.txt  allrhoc.f  aombecke.f  aomindef.f  aomlowdin.f  aomnorma.f  aomspin.f  aomtest.f  aomulliken.f  atomicrho.f  auxfile.f  besalu.f  binab.f  binedf.f  binsearch.f90  bondarea.f  calcedf.f  calcmos.f  calcres.f  casuhfdrvloc.f  casuhfoqsloc.f  cdafhmos.f  cgedfp.f  chemloc.f  chsort.f  closeunit.f  cmplxedf.f  cmplxlo.f  colord.f  connect.f  constants.inc  coremos.f  corredf.f  ctwocen.f  cutwfn.f  dafh.f  dafhdo.f  dafhspace.f  datatm.inc  delmo.f  (+115 more)
